# talk-to-my-docs-agents

./: .env.template  .gitignore  README.md  Taskfile.yaml  package-lock.json
.github/workflows/: agent_retrieval_agent-test.yml  core-test.yml  frontend_web-vitest.yml  web-test.yml
agent_retrieval_agent/: .gitignore  README.md  Taskfile.yml  pyproject.toml
agent_retrieval_agent/custom_model/: agent.py  config.py  custom.py  model-metadata.yaml  tool.py
agent_retrieval_agent/docker_context/: Dockerfile  requirements.txt
agent_retrieval_agent/tests/: test_custom_model.py
frontend_web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend_web/src/: App.css  App.tsx  index.css  main.tsx  routesConfig.tsx
frontend_web/src/constants/: paths.ts
frontend_web/src/lib/: utils.ts
frontend_web/src/pages/: Chat.tsx  KnowledgeBases.tsx  NewKnowledgeBase.tsx  OAuthCallback.tsx  routes.ts  (+3 more)
frontend_web/tests/: App.test.tsx  setupTests.ts  test-utils.tsx
infra/: Pulumi.yaml  Taskfile.yaml  __main__.py  pyproject.toml
infra/feature_flags/: llm.yaml  talk_to_my_docs.yaml
infra/infra/: __init__.py  agent_retrieval_agent.py  llm.py  oauth.py  web.py
web/: .env.sample  README.md  Taskfile.yaml  build-app.sh  pyproject.toml  start-app.sh
web/app/: __init__.py  config.py  db.py  deps.py  main.py
web/scripts/: load_knowledgebase.py
web/static/: index.html
web/templates/: index.html
web/tests/: conftest.py  session.py  test_chat.py  test_config.py  test_deps.py  test_file_contents.py  test_knowledge_bases.py  test_main.py  test_utils.py
(+152 files in other folders)
